--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ sourceSets.main.java.srcDirs = ["src"]
 
 gradlerio.robotClass = "org.sharp.frc.team3260.RobotSoccer.Robot"   //The class for the main Robot Class. Used in manifest
 gradlerio.team = "3260"                                   //Your FRC team number (e.g. 5333 for team 'Can't C#', or 47 for Chief Delphi)
-gradlerio.rioIP = "10.32.60.22"                         //Uncomment to specify the IP address of the RIO
+gradlerio.rioIP = "roborio-3260.local"                         //Uncomment to specify the IP address of the RIO
 
 def robotManifest = {
     attributes 'Main-Class': 'edu.wpi.first.wpilibj.RobotBase'
